--- a/app/views/users/index.ejs
+++ b/app/views/users/index.ejs
@@ -1,6 +1,9 @@
 <html>
 	<head>
 		<script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.8/angular.js'></script>
+		<script type="text/javascript" src='/javascripts/app.js'></script>
+		<script type="text/javascript" src='/javascripts/controllers/dojo.js'></script>
+		<script type="text/javascript" src='/javascripts/models/friends_factory.js'></script>
 	</head>
 
 	<body>
@@ -17,6 +20,9 @@
 				</ul>
 
 				<h3>Add a new user</h3>
+				<ul class='error_messages'>
+					<li ng-repeat='error in errors'>{{error.message}}</li>
+				</ul>
 				<form>
 					<input type="text" name="name" placeholder="name" ng-model="new_user.name" />
 					<input type="text" name="email" placeholder="email" ng-model="new_user.email" />
